force-app/main/default/objects/Collateral__c/fields/Age_of_the_policy_holder__c.field-meta.xml
<CustomField>
    <fullName>Age_of_the_policy_holder__c</fullName>
    <inlineHelpText>Age of the policy holder as appearing in the policy</inlineHelpText>
    <label>Age of the policy holder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>