force-app/main/default/objects/Collateral__c/fields/Amount_of_Charges__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Charges__c</fullName>
    <label>Amount of Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>