force-app/main/default/objects/Collateral__c/fields/Collateral_Description__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Description__c</fullName>
    <label>Collateral Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>