force-app/main/default/objects/Collateral__c/fields/Collateral_Type__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Type__c</fullName>
    <label>Collateral Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assignment_LIC_Paper</fullName>
                <label>Assignment-LIC/Paper</label>
            </value>
            <value>
                <fullName>Creation of charge</fullName>
            </value>
            <value>
                <fullName>Hypothecation</fullName>
            </value>
            <value>
                <fullName>Lien Marketing – Security Document</fullName>
            </value>
            <value>
                <fullName>Lien Marketing – Shares/Deb</fullName>
            </value>
            <value>
                <fullName>Lien Marketing – Deposit – Other Bank</fullName>
            </value>
            <value>
                <fullName>Lien Marketing – Deposit – Our Bank</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Pledge</fullName>
            </value>
            <value>
                <fullName>Precious Metal and Jewel Collateral</fullName>
            </value>
            <value>
                <fullName>Securities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>