force-app/main/default/objects/Collateral__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>Loan_Applicant__c.Applicant_Type__c</field>
            <operation>notContain</operation>
            <value>Guarantor</value>
        </filterItems>
        <filterItems>
            <field>Loan_Applicant__c.Loan_Application__c</field>
            <operation>equals</operation>
            <valueField>$Source.Loan_Application__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Loan_Applicant__c</referenceTo>
    <relationshipLabel>Collateral</relationshipLabel>
    <relationshipName>Collateral</relationshipName>
    <type>Lookup</type>
</CustomField>