force-app/main/default/objects/Collateral__c/fields/Date_of_Confirmation_of_Pledge__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Confirmation_of_Pledge__c</fullName>
    <label>Date of Confirmation of Pledge</label>
    <type>Date</type>
</CustomField>