force-app/main/default/objects/Collateral__c/fields/Date_of_Creation_of_Lien_Charge__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Creation_of_Lien_Charge__c</fullName>
    <label>Date of Creation of Lien Charge</label>
    <type>Date</type>
</CustomField>