force-app/main/default/objects/Collateral__c/fields/Date_of_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Mortgage__c</fullName>
    <label>Date of Mortgage</label>
    <type>Date</type>
</CustomField>