force-app/main/default/objects/Collateral__c/fields/Date_of_Pledge_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Pledge_Agreement__c</fullName>
    <label>Date of Pledge Agreement</label>
    <type>Date</type>
</CustomField>