force-app/main/default/objects/Collateral__c/fields/Date_on_which_Premium_Last_Paid__c.field-meta.xml
<CustomField>
    <fullName>Date_on_which_Premium_Last_Paid__c</fullName>
    <label>Date on which Premium Last Paid</label>
    <type>Date</type>
</CustomField>