force-app/main/default/objects/Collateral__c/fields/Due_Date_of_First_Premium__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_of_First_Premium__c</fullName>
    <label>Due Date of First Premium</label>
    <type>Date</type>
</CustomField>