force-app/main/default/objects/Collateral__c/fields/Insurance_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_Code__c</fullName>
    <label>Insurance Company Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>