force-app/main/default/objects/Collateral__c/fields/Insurance_Premium_Amount__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Premium_Amount__c</fullName>
    <label>Insurance Premium Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>