force-app/main/default/objects/Collateral__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Application</label>
    <referenceTo>Loan_Application__c</referenceTo>
    <relationshipLabel>Collateral</relationshipLabel>
    <relationshipName>Collateral</relationshipName>
    <type>Lookup</type>
</CustomField>