force-app/main/default/objects/Collateral__c/fields/Maximum_Loanable_value__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Loanable_value__c</fullName>
    <label>Maximum Loanable value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>