force-app/main/default/objects/Collateral__c/fields/Name_of_the_Charge_Holder__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_Charge_Holder__c</fullName>
    <label>Name of the Charge Holder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>