force-app/main/default/objects/Collateral__c/fields/Name_of_the_Depositor_Assured__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_Depositor_Assured__c</fullName>
    <label>Name of the Depositor/ Assured</label>
    <length>255</length>
    <type>Text</type>
</CustomField>