force-app/main/default/objects/Collateral__c/fields/Nominee_address__c.field-meta.xml
<CustomField>
    <fullName>Nominee_address__c</fullName>
    <label>Nominee address</label>
    <type>TextArea</type>
</CustomField>