force-app/main/default/objects/Collateral__c/fields/Nominee_Name__c.field-meta.xml
<CustomField>
    <fullName>Nominee_Name__c</fullName>
    <label>Nominee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>