force-app/main/default/objects/Collateral__c/fields/Number_Of_documents__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_documents__c</fullName>
    <label>Number Of documents</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>