force-app/main/default/objects/Collateral__c/fields/Number_of_transfer_deeds_obtained__c.field-meta.xml
<CustomField>
    <fullName>Number_of_transfer_deeds_obtained__c</fullName>
    <label>Number of transfer deeds obtained</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>