force-app/main/default/objects/Collateral__c/fields/OLV_Factor__c.field-meta.xml
<CustomField>
    <fullName>OLV_Factor__c</fullName>
    <label>OLV Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>