force-app/main/default/objects/Collateral__c/fields/Percent_of_Sum_Insured__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Sum_Insured__c</fullName>
    <label>Percent of Sum Insured</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>