force-app/main/default/objects/Collateral__c/fields/Registration_Dated__c.field-meta.xml
<CustomField>
    <fullName>Registration_Dated__c</fullName>
    <label>Registration Dated</label>
    <type>Date</type>
</CustomField>