force-app/main/default/objects/Collateral__c/fields/Security_Margin_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Security_Margin_Percentage__c</fullName>
    <label>Security Margin Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>